Thu Oct 22 14:16:10 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          If a custom 'dependent' setting contains a double quote, then we
          must make a fake rule that corresponds to it.  Otherwise, make
          doesn't know how to deal with it.

Tue Oct 20 16:20:33 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/Message_Queue_T.cpp (enqueue_*): Move the notify() call outside
          the lock scope; holding the lock across a call that may block (or
          do anything else we don't know about) is dangerous. It resulted in
          deadlock at a customer site.

          See Bugzilla #3250 for any follow-up issues.

        * ace/Process_Mutex.h: Fix doxygen stuff and clarify the behavior
          when based on semaphores vs. mutexes where there's a choice.

Tue Oct 20 10:35:57 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_string.cpp:
          Reformatted returned string in emulated strsignal.
          If signum is invalid, "Unknown signal %d" is used to
          format the string. Otherwise, "Signal %d" is used.

          Use ACE_SYS_SIGLIST instead of ACE_HAS_SYS_SIGLIST.

        * ace/config-lynxos.h:
          Removed ACE_HAS_SYS_SIGLIST. Macro is no longer used.

Mon Oct 19 20:58:10 UTC 2009  Olli Savia  <ops@iki.fi>

        * configure.ac:
        * m4/config_h.m4:
          Added a check for strsignal.

Mon Oct 19 20:24:54 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/README:
        * ace/config-cray.h:
        * ace/config-cygwin32.h:
        * ace/config-hpux-11.00.h:
        * ace/config-lynxos.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-rtems.h:
        * configure.ac:
        * m4/config_h.m4:
          ACE_HAS_SYS_ERRLIST is no longer in use.

Mon Oct 19 19:25:40 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/README:
        * ace/config-aix-5.x.h:
        * ace/config-cray.h: